# rdf-canonicalization-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  jsonld2canonrdf.cpp
rdf-canonicalization-cpp/: CMakeLists.txt  CanonicalizationProcessor.cpp  CanonicalizationProcessor.h  Permutator.cpp  Permutator.h  RDFCanonicalizationProcessor.cpp  RDFCanonicalizationProcessor.h  sha256.h
rdf-canonicalization-cpp/cmake/: rdf-canonicalization-cppConfig.cmake.in
rdf-canonicalization-cpp/detail/: Permutator.cpp  Permutator.h  RDFCanonicalizationProcessor.cpp  RDFCanonicalizationProcessor.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h
rdf-canonicalization-cpp/test/: CMakeLists.txt
rdf-canonicalization-cpp/test/testrdf-canonicalization-cpp/: CMakeLists.txt  UriBaseRewriter.cpp  test_Permutator.cpp  test_RDFCanonicalizationProcessor-rdfc10.cpp  test_RDFCanonicalizationProcessor-urdna2015.cpp  test_Sha256.cpp  test_Sha384.cpp
rdf-canonicalization-cpp/test/testrdf-canonicalization-cpp/test_data/: canonicalize-manifest-urdna2015.jsonld
